overflow-fix

--- a/css/adaptation/tablet.css
+++ b/css/adaptation/tablet.css
@@ -7,6 +7,11 @@ html, body{
     overflow-x: hidden;
 }
 
+div{
+    overflow-y: hidden;
+    overflow-x: hidden;
+}
+
 
 
 @media (max-width: 1199px) {
